syntax = "proto3";
option go_package = "github.com/sacloud/autoscaler/request";

package autoscaler;

service ScalingService {
  rpc Up(ScalingRequest) returns (ScalingResponse);
  rpc Down(ScalingRequest) returns (ScalingResponse);
//  rpc Status(StatusRequest) returns (ScalingResponse);
}

message ScalingRequest {
  string source              = 1;
  string action              = 2;
  string resource_name       = 3;
  string desired_state_name  = 4; // 希望するスケール(プランなど)につけた名前
}

//message StatusRequest {
//  string scaling_job_id = 1;
//}

message ScalingResponse {
  string scaling_job_id   = 1;
  ScalingJobStatus status = 2;
  string message          = 3;
}

enum ScalingJobStatus {
  JOB_UNKNOWN         = 0;
  JOB_ACCEPTED        = 1;
  JOB_RUNNING         = 2;
  JOB_DONE            = 3;
  JOB_CANCELED        = 4;
  JOB_IGNORED         = 5;
  JOB_FAILED          = 6;
}
